--- a/templates/connections.html
+++ b/templates/connections.html
@@ -244,7 +244,7 @@
         <div class="row">
             <div class="col-12">
                 <h2><i class="fas fa-project-diagram"></i> 设备连接管理</h2>
-                <p class="text-muted">管理动力设备间的供电连接关系</p>
+                <p class="text-muted">管理设备间的供电连接关系</p>
             </div>
         </div>
 
